# check_msdefender

./: .env.example  .gitignore  .pdm-python  LICENSE  README.md  check_msdefender.ini.example  publish.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_verbose.py
.claude/: settings.local.json
.github/workflows/: python-package.yml  python-publish.yml
check_msdefender/: __init__.py  __main__.py  check_msdefender.py
check_msdefender/cli/: __init__.py  __main__.py  decorators.py  handlers.py  last_seen.py  onboarding_status.py  vulnerabilities.py
check_msdefender/cli/commands/: __init__.py  alerts.py  detail.py  last_seen.py  lastseen.py  legacy.py  listmachines.py  machines.py  onboarding.py  products.py  vulnerabilities.py
check_msdefender/core/: __init__.py  auth.py  config.py  defender.py  exceptions.py  logging_config.py  nagios.py
check_msdefender/services/: __init__.py  alerts_service.py  detail_service.py  lastseen_service.py  listmachines_service.py  machines_service.py  models.py  onboarding_service.py  onboarding_status_service.py  products_service.py  vulnerabilities_service.py
doc/: Feat-Click-Decorators-ErrorHandlers-Formatters.md  Feat-Click-Groups.md  Feat-Enhance-MsDefender-Vulnerabilities-Output.md  Feat-Fixture-Tests.md  Feat-Integration-Tests.md  Feat-MsDefender-Alerts.md  Feat-MsDefender-DetailMachine.md  Feat-MsDefender-ListMachines.md  Feat-MsDefender-ProductEvidence.md  Feat-MsDefender-Products.md  Feat-MsDefender-computerDnsName.md  Feat-Nagios-Detailed-Output.md  Feat-Nagios-Exit-Code.md  Feat-Nagios-Output.md  Feat-PDM-integration.md  Feat-Pypi-Package.md  Feat-Verbose.md
tests/: __init__.py
tests/fixtures/: alerts_data.json  machine_data.json  mock_defender_client.py  test_alerts_service.py  test_detail_service.py  test_lastseen_service.py  test_onboarding_service.py  test_vulnerabilities_service.py  vulnerability_data.json
tests/integration/: test_cli_integration.py  test_lastseen_integration.py
tests/unit/: test_alerts_service.py  test_detail_service.py
