[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "check-msdefender"
dynamic = ["version"]
authors = [
    {name = "ldvchosal", email = "ldvchosal@github.com"},
]
description = "A Nagios plugin for monitoring Microsoft Defender API endpoints"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
keywords = ["nagios", "monitoring", "microsoft", "graph", "api", "azure"]
dependencies = [
    "nagiosplugin>=1.4.0",
    "azure-identity>=1.12.0",
    "click>=8.0,<9.0"
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-asyncio>=1.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "twine>=6.2.0",
    "pdm>=2.0.0",
    "ruff>=0.13.0",
    "pdm-bump"
]

[project.urls]
Homepage = "https://github.com/lduchosal/check_msdefender"
"Bug Reports" = "https://github.com/lduchosal/check_msdefender/issues"
Source = "https://github.com/lduchosal/check_msdefender"
Documentation = "https://github.com/lduchosal/check_msdefender/blob/main/README.md"

[project.scripts]
check_msdefender = "check_msdefender.cli:main"

[tool.setuptools.package-data]
"*" = ["*.ini"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.pdm]
distribution = true
version = {source = "file", path = "check_msdefender/__init__.py"}

[tool.pdm.scripts]
format = "ruff format"
typecheck = "mypy check_msdefender/"
build = "python -m build"
publish = "python -m twine upload dist/* --verbose"
install = "pdm install"
install-dev = "pdm install -G dev"
clihelp = "check_msdefender --help"
climachines = "check_msdefender machines"
cli = {composite = ["clihelp", "climachines"]}
all = {composite = ["install", "format", "build", "test", "cli"]}

test = "env PYTHONPATH=src python -m pytest tests/ -v --cov=check_msdefender --cov-report=term-missing"
test-quick = "env PYTHONPATH=src python -m pytest tests/ --tb=no -q"
test-ci = "env PYTHONPATH=src python -m pytest tests/ -v --cov=check_msdefender --cov-report=term-missing -m 'not reverseproxy'"
test-unit = "env PYTHONPATH=src python -m pytest tests/unit/ -v"
test-integration = "env PYTHONPATH=src python -m pytest tests/integration/ -v"
test-cov = "env PYTHONPATH=src python -m pytest tests/ -v --cov=check_msdefender --cov-report=html --cov-report=term-missing"
lint = "ruff check check_msdefender/ tests/"
lint-fix = "ruff check --fix check_msdefender/ tests/"
format-check = "black --check check_msdefender/ tests/"
check = ["lint", "format-check", "typecheck", "test"]
bump-version = "pdm bump -v patch"
env = "echo ${PATH}"
clean = "rm -rf .coverage htmlcov/ .pytest_cache/ __pycache__/ check_msdefender/__pycache__/"
version-show = "python -c 'import check_msdefender; print(xp.__version__)'"
version-patch = "pdm bump patch"
version-minor = "pdm bump minor"
version-major = "pdm bump major"

[tool.pdm-bump]
version-files = [
    "check_msdefender/__init__.py:__version__",
]
